<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.BitcoindevkitSampleApp.Fragments">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/fira_mono_medium"
        android:text="@string/send"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/fira_mono"
        android:text="@string/send_to"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sendToAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sendToAddress"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/night_2"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:hint="@string/address"
        android:inputType="text"
        android:text=""
        android:textColor="@color/snow_3"
        android:textColorHint="@color/snow_3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/fira_mono"
        android:text="@string/amount"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sendAmount"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sendAmount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/night_2"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:hint="@string/satoshis_hint"
        android:inputType="number"
        android:text=""
        android:textColor="@color/snow_3"
        android:textColorHint="@color/snow_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendToAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/fira_mono"
        android:text="@string/fees"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/night_2"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/sat_vbyte"
        android:textColor="@color/snow_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendAmount" />

    <Button
        android:id="@+id/toBroadcastConfirmation"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/aurora_red"
        android:fontFamily="@font/fira_mono"
        android:text="@string/broadcast_transaction"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintWidth_percent="0.70" />

    <Button
        android:id="@+id/sendToWalletButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/frost_1"
        android:fontFamily="@font/fira_mono"
        android:text="@string/back_to_wallet"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.70" />

</androidx.constraintlayout.widget.ConstraintLayout>