<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:background="@color/night_2"
        android:fontFamily="@font/fira_mono_medium"
        android:gravity="center"
        android:text="0.00000000"
        android:textColor="@color/snow_3"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:background="@color/night_2"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/night_2"
        android:rotation="-14"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/ic_bitcoin_logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/frost_1"
        android:elevation="12dp"
        android:fontFamily="@font/fira_mono"
        android:text="@string/sync"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.85" />

    <Button
        android:id="@+id/toTransactionsButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/frost_1"
        android:fontFamily="@font/fira_mono"
        android:text="@string/transaction_history"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTransactionsButton"
        app:layout_constraintWidth_percent="0.85">

        <Button
            android:id="@+id/toReceiveButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/aurora_green"
            android:fontFamily="@font/fira_mono"
            android:gravity="bottom|end"
            android:text="@string/receive"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.45"
            tools:layout_editor_absoluteY="20dp" />

        <Button
            android:id="@+id/toSendButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/aurora_red"
            android:elevation="40dp"
            android:fontFamily="@font/fira_mono"
            android:gravity="bottom|end"
            android:text="@string/send2"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.45"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>